<resources>
    <string name="app_name" translatable="false">PhotoTracker</string>
    <string name="app_comment">Recording your own GPS tracks with taking pictures what you would like.</string>
    <string name="app_version_title">Version:</string>
    <string name="app_copyright_text">\u00A9 2018 Vitaly Panov</string>
    <string name="app_playmarket_link" translatable="false">https://play.google.com/store/apps/details?id=vitalypanov.phototracker </string>
    <string name="app_feedback_email_text" translatable="false">panovvitalik@gmail.com</string>
    <string name="app_feedback_email_title">Feedback PhotoTracker</string>
    <string name="app_feedback_send_title">Feedback PhotoTracker</string>
    <string name="app_feedback_send_failed">There are no email clients installed.</string>
    <string name="app_about_title">About...</string>
    <string name="photo_folder" translatable="false">PhotoTracker</string>
    <string name="photo_tracker_process_text">PhotoTraker are recording your track.</string>
    <string name="track_start_time">Start time</string>
    <string name="track_time">Duration time</string>
    <string name="track_distance">Distance covered</string>
    <string name="track_images">Images</string>
    <string name="track_comment">Comment</string>
    <string name="track_comment_hint">Enter a comment</string>
    <string name="track_start_tooltip">Start recording track...</string>
    <string name="alert_gps_title">GPS settings</string>
    <string name="alert_gps_message">GPS is not enabled. Do you want to go to the settings menu to turn it on?</string>
    <string name="remove_track_confirm_title">Remove track"</string>
    <string name="remove_track_confirm_message">Are you sure you want to remove the selected track?</string>
    <string name="remove_track_confirm_button_ok">Remove</string>
    <string name="duration">Duration</string>
    <string name="distance_metrics">Km</string>
    <string name="no_location_title">Undefined location</string>
    <string name="no_location_message">GPS location is not defined yet. Please wait a moment and try again.</string>
    <string name="ok">OK</string>
    <string name="gps_settings">Settings</string>
    <string name="gps_cancel">Cancel</string>
    <string name="progress_dialog_title">Please wait</string>
    <string name="progress_dialog_message">Track information loading... Please wait.</string>
    <string name="continue_track_confirm_title">Continue track"</string>
    <string name="continue_track_confirm_message">Are you sure you want to continue recording of the selected track?</string>
    <string name="continue_track_confirm_button_ok">GO</string>
    <string name="action_start">Start</string>
    <string name="action_track_list">Track list</string>
    <string name="action_resume">Resume</string>
    <string name="track_continue_tooltip">Continue recording track...</string>
    <string name="menu_start">Start</string>
    <string name="menu_track_list">Recorded Tracks</string>
    <string name="menu_send_feedback">Send feedback</string>
    <string name="menu_rate_play_market">Rate at Play Market</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About </string>
    <string name="pause_service_confirm_title">Pause recording</string>
    <string name="pause_service_confirm_message">Are you sure to pause recording of the current track? (you can continue recording later)</string>
    <string name="pause_service_confirm_button_ok">Pause</string>
    <string name="setting_group_general">General</string>
    <string name="setting_group_performance">Performance</string>
    <string name="setting_group_account">Accounts</string>
    <string name="setting_map_performance_switch">Map performance improve</string>
    <string name="setting_map_performance_hint">Show simple icons instead of photos on maps</string>
    <string name="setting_map_smooth_track_switch">Smooth track on map</string>
    <string name="setting_map_smooth_track_hint">Set this option to show more smooth route on the map</string>
    <string name="setting_runkeeper" translatable="false">RunKeeper</string>
    <string name="setting_runkeeper_hint">Please touch to configure</string>
    <string name="confirm_delete_image_title">Delete photo</string>
    <string name="confirm_delete_image_message">Are you sure you want to delet this photo?</string>
    <string name="confirm_delete_image_button_ok">Delete</string>
    <string name="runkeeper_progress_message">Uploading track data to RunKeeper.\nPlease wait a moment...</string>
    <string name="runkeeper_fininsh_title">Upload success</string>
    <string name="runkeeper_fininsh_message">Uploading to RunKeeper is finished successfully.</string>
    <string name="runkeeper_fininsh_fail_title">Failed uploading</string>
    <string name="runkeeper_fininsh_fail_message">Uploading to RunKeeper is failed. Try again.</string>
    <string name="loading">Loading</string>
    <string name="runkeeper_not_setup_title">Upload error</string>
    <string name="runkeeper_not_setup_message">RunKeeper is not configured for uploading.\nFirst you should setup access to runkeeper.com in the Settings menu.\nThen you can try again.</string>
    <string name="runkeeper_upload_confirm_title">Upload track"</string>
    <string name="runkeeper_upload_confirm_message">Are you sure you want to upload the selected track to RunKeeper?</string>
    <string name="runkeeper_confirm_button_ok">Upload</string>
    <string name="runkeeper_already_configured_title">RunKeeper is already configured</string>
    <string name="runkeeper_already_configured_message">Access to RunKeeper is successfully configured already.\nDo you want to overwrite this setting?</string>
    <string name="runkeeper_already_configured_button_ok">Configure</string>
    <string name="s1" translatable="false">8Wu+oaZm25rOVr/BwwWxtMETnsiQtDgMSGFUu1Mc2Z9XXqonuwOYRTWmuu5gNVX8</string>
    <string name="s2" translatable="false">dt8/JN8gdkTrcm7JLuH+TTAO3iXiMUGFwSOBgmwUFpPcRUiRiVxBwIFTi1PLpyi5</string>
    <string name="menu_action_delete">Remove track</string>
    <string name="menu_action_runkeeper">Upload to RunKeeper</string>
    <string name="setting_flickr_photos_switch">Flickr photos</string>
    <string name="setting_flickr_photos_hint">Show photos of other users from flickr.com</string>
    <string name="setting_flickr_photos_percent">Flickr density of photos</string>
    <string name="setting_flickr_photos_percent_hint">Slide from min to max to get more photos from flickr on map. (Use carefully thus it decrease perfomance of maps)</string>
    <string name="camera_error" translatable="false">This device doesn\'t support Camera2 API.</string>
</resources>
