<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/setting_group_performance">
        <SwitchPreference
            android:defaultValue="@bool/map_perfromance_default_false"
            android:title="@string/setting_map_performance_switch"
            android:maxLines="3"
            android:key="map_performance_switch"
            android:summary="@string/setting_map_performance_hint" />
        <SwitchPreference
            android:defaultValue="@bool/flickr_photos_default_true"
            android:title="@string/setting_flickr_photos_switch"
            android:maxLines="3"
            android:key="flickr_switch"
            android:summary="@string/setting_flickr_photos_hint" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/setting_group_export">
        <Preference
            android:key="runkeeper_access_token"
            android:title="@string/setting_runkeeper"
            android:summary="@string/setting_runkeeper_hint"
            android:icon="@mipmap/ic_runkeeper"
            ></Preference>
    </PreferenceCategory>
</PreferenceScreen>