<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/duration_time_text_view"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="40dp"
        android:textAlignment="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/track_time"
        android:textAlignment="center"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="20dp">
    </FrameLayout>

    <TextView
        style="?android:attr/listSeparatorTextViewStyle"
        android:id="@+id/distance_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="60dp"
        android:textAlignment="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/track_distance"
        android:textAlignment="center"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="20dp">
    </FrameLayout>

    <TextView
        android:id="@+id/start_time_text_view"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="25dp"
        android:textAlignment="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/track_start_time"
        android:textAlignment="center"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="20dp">
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/track_photo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:src="@mipmap/ic_camera" />

        <ImageButton
            android:id="@+id/track_pause"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight=".50"
            android:src="@mipmap/ic_pause" />

        <ImageButton
            android:id="@+id/track_settings"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:src="@mipmap/ic_settings"/>
    </LinearLayout>
</LinearLayout>